NIFI-12411: Update PublishAMQP to read AMQP headers value from FlowFile attributes and `amq$headers` string
Processor can now also create message headers using attributes matching the given Regex property. The name of attribute is used as header key.
In addition to that it can read values from two sources i.e. attributes matching Regex and the headers present in `amq$headers` string. In case
of key duplication in both sources the precedence property decide which value will be used.

Signed-off-by: Umar Hussain <umarhussain.work@gmail.com>